<resources>
    <string name="acousticguitar">Acoustic guitar</string>
    <string name="activity_package_delete_confirm_title">Attention</string>
    <string name="add_frequent_phrases">Add frequent phrases</string>
    <string name="africaanimals_preview">Savanna</string>
    <string name="alarmclock">Alarm clock</string>
    <string name="all_call_livetalk_enable">Using top-up package for domestic and international calls</string>
    <string name="all_call_livetalk_remain_mins">Minutes remaining: %1$s domestic or %2$s international</string>
    <string name="always">Always</string>
    <string name="alwaysUsePrompt">Remember my choice</string>
    <string name="amazonanimals_preview">Rainforest</string>
    <string name="android_activity_resolver_use_always">@android:string/adbwifi_active_notification_message</string>
    <string name="android_activity_resolver_use_once">@android:string/adbwifi_active_notification_title</string>
    <string name="android_add_account_label">@android:string/aerr_report</string>
    <string name="android_aerr_application">@android:string/aerr_restart</string>
    <string name="android_aerr_process">@android:string/alert_windows_notification_title</string>
    <string name="android_anr_activity_application">@android:string/app_category_productivity</string>
    <string name="android_anr_activity_process">@android:string/app_category_social</string>
    <string name="android_anr_application_process">@android:string/app_category_video</string>
    <string name="android_anr_process">@android:string/app_info</string>
    <string name="android_anr_title">@android:string/app_not_found</string>
    <string name="android_bugreport_message">@android:string/config_activityRecognitionHardwarePackageName</string>
    <string name="android_byteShort">@android:string/config_batterymeterErrorPerimeterPath</string>
    <string name="android_common_last_name_prefixes">@android:string/config_defaultNearbySharingComponent</string>
    <string name="android_common_name_conjunctions">@android:string/config_defaultNetworkRecommendationProviderPackage</string>
    <string name="android_common_name_prefixes">@android:string/config_defaultNetworkScorerPackageName</string>
    <string name="android_common_name_suffixes">@android:string/config_defaultOnDeviceSpeechRecognitionService</string>
    <string name="android_fast_scroll_alphabet">@android:string/force_close</string>
    <string name="android_force_close">@android:string/hour_picker_description</string>
    <string name="android_forward_intent_to_owner">@android:string/httpErrorFailedSslHandshake</string>
    <string name="android_forward_intent_to_work">@android:string/httpErrorFile</string>
    <string name="android_gigabyteShort">@android:string/imProtocolAim</string>
    <string name="android_kilobyteShort">@android:string/lockscreen_sim_puk_locked_instructions</string>
    <string name="android_lockscreen_emergency_call">@android:string/media_route_controller_disconnect</string>
    <string name="android_lockscreen_forgot_pattern_button_text">@android:string/media_route_status_not_available</string>
    <string name="android_lockscreen_missing_sim_message_short">@android:string/mediasize_chinese_prc_9</string>
    <string name="android_megabyteShort">@android:string/nas_upgrade_notification_enable_action</string>
    <string name="android_noApplications">@android:string/notification_reply_button_accessibility</string>
    <string name="android_power_off">@android:string/resolver_cant_access_personal_apps_explanation</string>
    <string name="android_reboot_safemode_confirm">@android:string/restr_pin_error_doesnt_match</string>
    <string name="android_reboot_safemode_title">@android:string/restr_pin_error_too_short</string>
    <string name="android_report">@android:string/safeMode</string>
    <string name="android_ringtone_default_with_actual">Default ringtone (%1$s)</string>
    <string name="android_ringtone_silent">None</string>
    <string name="android_ringtone_unknown">Unknown ringtone</string>
    <string name="android_safe_media_volume_warning">@android:string/share</string>
    <string name="android_shutdown_confirm">@android:string/status_bar_location</string>
    <string name="android_shutdown_confirm_question">@android:string/status_bar_managed_profile</string>
    <string name="android_shutdown_progress">@android:string/status_bar_microphone</string>
    <string name="android_ssl_certificate">@android:string/sync_too_many_deletes</string>
    <string name="android_storage_usb">@android:string/usb_contaminant_not_detected_message</string>
    <string name="android_usb_mtp_notification_title">@android:string/wfcSpnFormat_wifi_calling_bar_spn</string>
    <string name="android_usb_ptp_notification_title">@android:string/wfc_mode_cellular_preferred_summary</string>
    <string name="android_volume_alarm">@android:string/wifi_no_internet</string>
    <string name="android_volume_icon_description_bluetooth">@android:string/work_mode_emergency_call_button</string>
    <string name="android_volume_icon_description_incall">@android:string/work_mode_off_title</string>
    <string name="android_volume_icon_description_media">@android:string/work_mode_turn_on</string>
    <string name="android_volume_icon_description_notification">@android:string/work_profile_deleted</string>
    <string name="android_volume_icon_description_ringer">@android:string/work_profile_deleted_description_dpm_wipe</string>
    <string name="android_wait">@android:string/zen_mode_duration_hours_short</string>
    <string name="android_whichApplication">@null</string>
    <string name="android_whichApplicationNamed">@null</string>
    <string name="android_whichEditApplication">@null</string>
    <string name="android_whichEditApplicationNamed">@null</string>
    <string name="android_whichHomeApplication">@null</string>
    <string name="android_whichHomeApplicationNamed">@null</string>
    <string name="android_whichSendApplication">@null</string>
    <string name="android_whichSendApplicationNamed">@null</string>
    <string name="android_whichViewApplication">@null</string>
    <string name="android_whichViewApplicationNamed">@null</string>
    <string name="android_wireless_display_route_description">@null</string>
    <string name="app_continuity_channel_name">App layout adjustments</string>
    <string name="application_cannot_open_alipay_health_code">"Couldn't open Alipay health code"</string>
    <string name="application_cannot_open_alipay_payment_code">"Couldn't open Alipay payment code"</string>
    <string name="application_cannot_open_alipay_scanner">"Couldn't open Alipay scanner"</string>
    <string name="application_cannot_open_au_pay">Install au PAY first</string>
    <string name="application_cannot_open_weixin_health_code">"Couldn't open WeChat health code"</string>
    <string name="application_cannot_open_weixin_payment_code">"Couldn't open WeChat payment code"</string>
    <string name="application_cannot_open_weixin_scanner">"Couldn't open WeChat scanner"</string>
    <string name="application_not_install_content">"Looks like the app that performs this action isn't installed on your device. You can install this app or assign a different action to this gesture."</string>
    <string name="apply_password_action">OK</string>
    <string name="apply_password_confirm_dlg_msg">Use your current lock screen password to access settings for %s.</string>
    <string name="apply_password_confirm_dlg_title">%s password</string>
    <string name="arcticanimals_preview">The Arctic</string>
    <string name="asend">Send</string>
    <string name="asus">Asus</string>
    <string name="asus_phone">Asus</string>
    <string name="atlantis">Atlantis (stereo)</string>
    <string name="australiaanimals_preview">Australia</string>
    <string name="auto_disable_screenbuttons_disable_toast_text">Navigation buttons disabled, double tap any button to turn them back on</string>
    <string name="auto_disable_screenbuttons_enable_toast_text">Navigation buttons enabled</string>
    <string name="auto_disable_screenbuttons_float_text">Touch to disable navigation buttons</string>
    <string name="auto_disable_screenbuttons_prompts_message">Double tap any button to turn navigations back on at any time.</string>
    <string name="auto_disable_screenbuttons_prompts_not_show_again">"Don't show again"</string>
    <string name="auto_disable_screenbuttons_prompts_ok">OK</string>
    <string name="auto_disable_screenbuttons_prompts_title">Disable navigation buttons?</string>
    <string name="auto_disable_screenbuttons_tap_again_exit_toast_text">Tap again to exit</string>
    <string name="auto_start_warning_allow">Allow</string>
    <string name="auto_start_warning_deny">Deny</string>
    <string name="auto_start_warning_title">Allow %s to start automatically?</string>
    <string name="autofill">Autofill</string>
    <string name="autofill_save_message">Allow MIUI to save your accounts and passwords?</string>
    <string name="autofill_save_ok">Allow</string>
    <string name="autofill_save_sub_message">"You'll be able to manage saved passwords in Settings > Passwords &amp; security > %s."</string>
    <string name="autofill_save_title">Save passwords automatically</string>
    <string name="autofill_service_name">Manage passwords</string>
    <string name="back_double_tap">Double back tap</string>
    <string name="back_tap">Back tap</string>
    <string name="back_triple_tap">Triple back tap</string>
    <string name="backup_suspend_hint">This app is being backed up now. Wait until the backup is complete and try again.</string>
    <string name="battery_authentic_failed_button">Got it</string>
    <string name="battery_authentic_failed_title">Attention</string>
    <string name="beep">Beep</string>
    <string name="bells">Bells</string>
    <string name="birdcicada_preview">Birds &amp; fireflies</string>
    <string name="blackshark">Black Shark</string>
    <string name="blackshark_1">Black Shark</string>
    <string name="blackshark_2">Black Shark 2</string>
    <string name="blackshark_2_pro">Black Shark 2 Pro</string>
    <string name="blackshark_3">Black Shark 3</string>
    <string name="blackshark_3_pro">Black Shark 3 Pro</string>
    <string name="blackshark_helo">Black Shark Helo</string>
    <string name="blackshark_phone">Black Shark</string>
    <string name="blues">Blues</string>
    <string name="bluetooth_close">This app turned off Bluetooth</string>
    <string name="bluetooth_disable_notification_content">%s turned off Bluetooth</string>
    <string name="bluetooth_disable_notification_title">Bluetooth is off</string>
    <string name="bluetooth_enable_notification_content">%s turned on Bluetooth</string>
    <string name="bluetooth_enable_notification_title">Bluetooth is on</string>
    <string name="bluetooth_open">This app turned on Bluetooth</string>
    <string name="bottle">Bottle</string>
    <string name="bottom_bar_smallwindow_text">Release to pin</string>
    <string name="breeze">Breeze</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="button_text_delete">Uninstall</string>
    <string name="enable_midrop">Turn on</string>
    <string name="help">"Can't find devices?"</string>
    <string name="nearby_share">Nearby Share</string>
    <string name="resolver_mi_browser">Mi Browser</string>
    <string name="resolver_offical_recommend">Official</string>
    <string name="resolver_other_method">Other options</string>
    <string name="resolver_recommend_options_tag">Recommended options</string>
    <string name="security_share_text">Privacy protection</string>
    <string name="send_files_by">Share files via</string>
    <string name="send_files_to">Send items to</string>
    <string name="throwing_print">Print</string>
    <string name="throwing_screen">Cast</string>
    <string name="tips_prompt_enable_midrop">Mi Share</string>
</resources>