<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="13.0sp" android:textColor="#99000000" android:id="@id/resolver_offical_recommend_tag" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/resolver_recommend_options_tag" android:layout_alignParentTop="true" android:layout_marginStart="44.0dip" android:layout_alignParentStart="true" />
    <RelativeLayout android:id="@id/resolver_offical_recommend_rl" android:background="@drawable/resolver_offical_recommend_bg" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="67.0dip" android:layout_marginLeft="37.0dip" android:layout_marginTop="11.0dip" android:layout_marginRight="37.0dip" android:layout_below="@id/resolver_offical_recommend_tag" android:layout_alignParentStart="true">
        <ImageView android:id="@id/resolver_offical_recommend_icon_iv" android:layout_width="45.0dip" android:layout_height="45.0dip" android:layout_centerVertical="true" android:layout_marginStart="13.0dip" android:layout_alignParentStart="true" />
        <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:id="@id/resolver_offical_recommend_name_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/resolver_mi_browser" android:layout_centerVertical="true" android:layout_marginStart="7.0dip" android:layout_toEndOf="@id/resolver_offical_recommend_icon_iv" />
        <TextView android:textSize="9.0sp" android:textColor="#ff0099ff" android:gravity="center" android:id="@id/resolver_recommend_tag_tv" android:background="@drawable/resolver_recommend_tag_bg" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/resolver_offical_recommend" android:layout_centerVertical="true" android:paddingStart="4.0dip" android:paddingEnd="4.0dip" android:layout_marginEnd="17.0dip" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <TextView android:textSize="13.0sp" android:textColor="#99000000" android:id="@id/resolver_other_recommend_tag" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="23.0dip" android:layout_marginBottom="13.0dip" android:text="@string/resolver_other_method" android:layout_below="@id/resolver_offical_recommend_rl" android:layout_alignStart="@id/resolver_offical_recommend_tag" />
</RelativeLayout>