<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_file_type_container" android:background="@drawable/bg_transmission_file_type" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/file_type_container_height" android:layout_marginLeft="@dimen/layout_padding_horizon" android:layout_marginTop="0.0dip" android:layout_marginRight="@dimen/layout_padding_horizon" android:layout_marginBottom="8.0dip" android:paddingStart="13.5dip" android:paddingEnd="13.5dip" />
    <TextView android:textSize="@dimen/security_share_textsize" android:textColor="@color/textcolor_security_share" android:id="@id/security_share_text" android:background="@drawable/bg_transmission_file_type" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:text="@string/security_share_text" android:drawablePadding="4.299988dip" android:layout_below="@id/ll_file_type_container" android:alpha="0.7" android:drawableStart="@drawable/security_share" android:paddingStart="13.0dip" android:paddingEnd="13.0dip" android:layout_alignStart="@id/ll_file_type_container" />
    <RelativeLayout android:id="@id/rl_send_to" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/layout_padding_horizon" android:layout_marginTop="4.0dip" android:layout_marginRight="@dimen/layout_padding_horizon" android:layout_below="@id/security_share_text">
        <TextView android:textSize="@dimen/send_file_to_textsize" android:textStyle="bold" android:textColor="@color/textcolor_file_send_to" android:ellipsize="end" android:gravity="start" android:id="@id/tv_send_file_to" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/send_files_to" android:maxLines="2" android:textAlignment="viewStart" android:layout_marginEnd="2.0dip" android:layout_toStartOf="@id/ll_link_menu" android:layout_alignParentStart="true" />
        <TextView android:textSize="@dimen/help_textsize" android:textColor="@color/textcolor_help" android:ellipsize="end" android:gravity="start" android:id="@id/tv_help" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help" android:maxLines="1" android:layout_below="@id/tv_send_file_to" android:textAlignment="viewStart" android:layout_marginEnd="2.0dip" android:layout_alignParentStart="true" />
        <LinearLayout android:gravity="end" android:id="@id/ll_link_menu" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentEnd="true">
            <ImageButton android:id="@id/iv_printer" android:background="@color/bg_btn_enable_midrop" android:layout_width="@dimen/iv_printer_and_throwing_screen_width" android:layout_height="@dimen/iv_printer_and_throwing_screen_height" android:src="@drawable/mishare_ic_printer" android:layout_centerVertical="true" android:contentDescription="@string/throwing_print" />
            <ImageButton android:id="@id/iv_throwing_screen" android:background="@color/bg_btn_enable_midrop" android:layout_width="@dimen/iv_printer_and_throwing_screen_width" android:layout_height="@dimen/iv_printer_and_throwing_screen_height" android:src="@drawable/mishare_ic_cast" android:layout_centerVertical="true" android:contentDescription="@string/throwing_screen" android:layout_marginStart="10.0dip" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout android:id="@id/rl_device" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/rl_send_to">
        <com.miui.mishare.app.view.OverScrollLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/rl_device_marginTop">
            <com.android.internal.widget.RecyclerView android:id="@id/lv_scanned_device" android:visibility="gone" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:divider="@android:color/transparent" android:paddingStart="@dimen/layout_padding_horizon" android:paddingEnd="@dimen/layout_padding_horizon" />
        </com.miui.mishare.app.view.OverScrollLayout>
        <RelativeLayout android:id="@id/rl_prompt_switch" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/layout_padding_horizon" android:layout_marginTop="42.0dip" android:layout_marginRight="@dimen/layout_padding_horizon" android:layout_marginBottom="20.0dip" android:layout_centerVertical="false">
            <ImageView android:id="@id/ic_midrop_enable" android:layout_width="62.0dip" android:layout_height="62.0dip" android:src="@drawable/ic_transmission_not_enable" android:layout_centerVertical="true" android:layout_marginEnd="10.0dip" />
            <TextView android:textSize="@dimen/prompt_switch_tips_textsize" android:textColor="@color/textcolor_enable_midrop_tips" android:id="@id/tv_prompt_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tips_prompt_enable_midrop" android:layout_centerVertical="true" android:lineSpacingExtra="2.0dip" android:layout_toStartOf="@id/btn_enable_midrop" android:layout_toEndOf="@id/ic_midrop_enable" />
            <TextView android:textSize="14.0sp" android:textColor="@color/textcolor_enable_midrop" android:ellipsize="end" android:gravity="center" android:id="@id/btn_enable_midrop" android:background="@color/bg_btn_enable_midrop" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/enable_midrop" android:layout_centerVertical="true" android:layout_marginStart="24.0dip" android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </RelativeLayout>
    <View android:id="@id/bottom_divider" android:background="@color/bg_bottom_divider" android:layout_width="fill_parent" android:layout_height="0.39999998dip" android:layout_marginLeft="@dimen/layout_padding_horizon" android:layout_marginTop="24.0dip" android:layout_marginRight="@dimen/layout_padding_horizon" android:layout_marginBottom="24.0dip" android:layout_below="@id/rl_device" />
    <RelativeLayout android:id="@id/rl_nearby" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/layout_padding_horizon" android:layout_marginRight="@dimen/layout_padding_horizon" android:layout_below="@id/bottom_divider">
        <LinearLayout android:gravity="center_vertical" android:id="@id/ll_nearby" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/send_file_to_textsize" android:textStyle="bold" android:textColor="@color/textcolor_file_send_to" android:ellipsize="end" android:gravity="start" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/send_files_by" android:maxLines="2" android:layout_weight="1.0" android:textAlignment="viewStart" />
            <TextView android:textSize="14.0sp" android:textColor="@color/textcolor_enable_midrop" android:ellipsize="marquee" android:gravity="center" android:id="@id/btn_nearby" android:background="@drawable/bg_enable_midrop" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="40.0dip" android:maxWidth="200.0dip" android:text="@string/nearby_share" android:singleLine="true" android:drawablePadding="8.0dip" android:marqueeRepeatLimit="2" android:drawableStart="@drawable/ic_nearby" android:layout_marginStart="8.0dip" />
        </LinearLayout>
        <View android:id="@id/nearby_divider" android:background="@color/bg_bottom_divider" android:layout_width="fill_parent" android:layout_height="0.39999998dip" android:layout_marginTop="24.0dip" android:layout_marginBottom="24.0dip" android:layout_below="@id/ll_nearby" />
    </RelativeLayout>
</RelativeLayout>